tests/semantic/pass/pointer_arithmetic2.c
int main(void) {
  int *i;
  i = (i - 1);
  *(i-1) = 0;
  return 0;
}
