tests/semantic/fail/illegal_pointer_comparision.c
int main(void) {
  int* iptr;
  char* charptr;
  if (iptr < charptr) {
    return 1;
  }
  return 0;
}
